# anonymous-identity-generator

./: .gitignore  LICENSE  README.md  config.json  config.yaml  setup.cfg
src/anonidgen/: anonidgen.py  config.py  config.yaml
