[metadata]
name = anonymous-identity-generator
version = 0.2.0
author = 0xUnicorn
author_email = anonidgen@chdk.anonaddy.me
description = Anonymous identity/credential generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xUnicorn/anonymous-identity-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    anonidgen = anonidgen.anonidgen:main

